# rocket-analysis-toolkit

./: .gitignore  README.md  config.json  pyproject.toml
Team_data/: aero_group.json  fuselage_group.json  nozzle_group.json
docs/examples/: material_comparison_example.py
rocket_prod_test/: config.json
rocket_prod_test/Scripts/: activate  activate.bat
src/rocket_toolkit/: config.json  config.py
src/rocket_toolkit/cli/: main.py
src/rocket_toolkit/core/: fin_temperature_tracker.py  flight_simulator.py  stability_analyzer.py  thermal_analyzer.py  thermal_data.py  trajectory_optimizer.py
src/rocket_toolkit/geometry/: component_manager.py  materials.py  rocket_fin.py
src/rocket_toolkit/models/: atmosphere_model.py  material_comparison_example.py
src/rocket_toolkit/plotting/: fin_animation.py
tests/: test_imports.py
