[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocket-analysis-toolkit"
version = "0.1.0"
description = "Comprehensive rocket flight dynamics, thermal, and stability analysis"
authors = [{name = "Jesper Meijerink", email = "jnmeijerink@tudelft.nl"}]
license = {text = "JNM"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
    "pandas>=1.3",
    "isacalc>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/J1mmortal/rocket-analysis-toolkit.git"
